tests/src/frontend/typechecking/invalid/infer_frozen_met_1.sk
class Tester() {
  fun foo<T: frozen>(T): void {
    void
  }
}
fun test(): void {
  Tester().foo(mutable Array[0])
}
